<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <AutoCompleteTextView
        android:id="@+id/country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <ListView  
        android:id="@+id/lv"  
        android:layout_width="fill_parent"  
        android:layout_height="wrap_content"/>
    
    <CheckBox
        android:id="@+id/checkbox_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox1"
        android:onClick="onCheckboxClicked" />
    
    <RadioGroup 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton 
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio1"
            android:onClick="onRadioButtonClicked" />
        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio2"
            android:onClick="onRadioButtonClicked" />
        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio3"
            android:onClick="showPopup" />  
    </RadioGroup>
    
    <ToggleButton 
        android:id="@+id/togglebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="ON"
        android:textOff="OFF"
        android:onClick="onToggleButtonClicked" />
    
    <Spinner
        android:id="@+id/spinner_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <Button 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:text="@string/pick_time" 
        android:onClick="showTimePickerDialog" />
</LinearLayout>